<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_gravity="center"
    android:background="@drawable/app_background">

    <TextView
        android:id="@+id/sms_popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognized_order"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sms_popup_txt"
        android:layout_below="@id/sms_popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_text_default"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/sms_popup_number"
        android:layout_below="@id/sms_popup_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/edit_num_placeholder"
        android:textSize="16sp"
        android:autofillHints=""
        android:inputType="numberSigned" />

    <LinearLayout
        android:layout_below="@id/sms_popup_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sms_popup_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/button_cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@drawable/popup_background" />

        <Button
            android:id="@+id/sms_popup_valid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/button_accept"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@drawable/popup_background" />

    </LinearLayout>

</RelativeLayout>
